Added components and a simple controller/state estimator

--- a/notebooks/experimentation/dynamics modeling.ipynb
+++ b/notebooks/experimentation/dynamics modeling.ipynb
@@ -388,7 +388,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test Rotational Dyanmics with RK45"
+    "Test Rotational Dyanmics with RK45\n",
+    "\n",
+    "Quaternion Reference Material (also see)\n",
+    "\n",
+    "Rotations https://www.euclideanspace.com/physics/kinematics/angularvelocity/\n",
+    "Quaternions for rotational dynamics https://arxiv.org/pdf/0811.2889.pdf\n",
+    "https://math.stackexchange.com/questions/1896379/how-to-use-the-quaternion-derivative\n",
+    "https://math.stackexchange.com/questions/39553/how-do-i-apply-an-angular-velocity-vector3-to-a-unit-quaternion-orientation\n",
+    "https://math.stackexchange.com/questions/1792826/estimate-angular-velocity-and-acceleration-from-a-sequence-of-rotations\n",
+    "http://www.mare.ee/indrek/varphi/vardyn.pdf"
    ]
   },
   {
